[gd_scene load_steps=3 format=3 uid="uid://settings"]

[ext_resource type="Script" uid="uid://bflp7liemaxi4" path="res://Code/settingsControl.gd" id="1"]
[ext_resource type="Script" uid="uid://du0ieubv1cykq" path="res://Code/keyRemapButton.gd" id="2"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 200.0
offset_right = 952.0
offset_bottom = 209.0

[node name="AudioSettingsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Audio Settings"
horizontal_alignment = 1

[node name="MasterVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master"
horizontal_alignment = 2

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="MusicVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music"
horizontal_alignment = 2

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="SfxVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SfxVolumeLabel" type="Label" parent="VBoxContainer/SfxVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX"
horizontal_alignment = 2

[node name="SfxVolumeSlider" type="HSlider" parent="VBoxContainer/SfxVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="ControlsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="VBoxContainer/ControlsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Controls"
horizontal_alignment = 1

[node name="JumpRemapContainer" type="HBoxContainer" parent="VBoxContainer/ControlsContainer"]
layout_mode = 2
alignment = 1

[node name="JumpLabel" type="Label" parent="VBoxContainer/ControlsContainer/JumpRemapContainer"]
layout_mode = 2
text = "Jump"

[node name="JumpRemapButton" type="Button" parent="VBoxContainer/ControlsContainer/JumpRemapContainer"]
layout_mode = 2
script = ExtResource("2")
action_name = "jump"

[node name="SprintRemapContainer2" type="HBoxContainer" parent="VBoxContainer/ControlsContainer"]
layout_mode = 2
alignment = 1

[node name="SprintLabel" type="Label" parent="VBoxContainer/ControlsContainer/SprintRemapContainer2"]
layout_mode = 2
text = "Sprint"

[node name="SprintRemap" type="Button" parent="VBoxContainer/ControlsContainer/SprintRemapContainer2"]
layout_mode = 2
script = ExtResource("2")
action_name = "sprint"
